[tool.poetry]
name = "general-rag"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "rag"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.43.2"
streamlit-pdf-viewer = "^0.0.21"
langchain = "^0.3.21"
docling = "^2.28.0"
black = "^25.1.0"
langchain-community = "^0.3.20"
langchain-openai = "^0.3.10"
langchain-huggingface = "^0.1.2"
langchain-text-splitters = "^0.3.7"
dotenv = "^0.9.9"
langdetect = "^1.0.9"
pymupdf = "^1.25.4"
stop-words = "^2018.7.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
